# mr-contractor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: benchmarks.yml  tests.yml
bench/: main.cpp  maps.hpp
cmake/: benchdeps.cmake  dependencies.cmake
example/: main.cpp
include/mr-contractor/: apply.hpp  contractor.hpp  def.hpp  executor.hpp  par.hpp  pipe.hpp  seq.hpp  stages.hpp  task.hpp  traits.hpp
include/mr-contractor/new/: apply.hpp  stages.hpp  task.hpp  traits.hpp
tests/: main.cpp
